Se crean funcionalidades de:
1. deshabilitar componentes
2. abrir nota
3. guardar de menu principal
4. Actualizar sueÃ±o ....sueÃ±os....
5. Evento de mouse sobre los nodos del treeView
6. Copiar del menu del textBox
7. Cortar del menu del textBox
8. pegar del menu del textBox
9. cerrar sueÃ±o del menu del textBox
10. Salir sueÃ±o
11. Guardar del menu del textBox ...sueÃ±os...
12. Limpiar sueÃ±o
13. deshacer generico ....INCOMPLETO....
10. Salir sueÃ±o
11. Guardar del menu del textBox ...sueÃ±os...
12. Limpiar sueÃ±o
13. deshacer generico ....INCOMPLETO....

--- a/Recuerdos/Recuerdos/Vista/Recuerdos.resx
+++ b/Recuerdos/Recuerdos/Vista/Recuerdos.resx
@@ -128,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
-        CQAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABDwEAAQ8BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAgEAATABAAEwAQABDwEAAQ8BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABPAMAAQ8DAAEBAQABCAUAAYQBAxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -266,11 +266,17 @@
         a5/rcXFOeOKNA5H7MTZHERBCCJWlG274P9KcU6+wp5cHAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="csmTextBox.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>634, 18</value>
+  </metadata>
   <metadata name="ofdNota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>274, 17</value>
   </metadata>
   <metadata name="sfdNota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>377, 17</value>
+  </metadata>
+  <metadata name="mnPrincipal.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>14, 13</value>
   </metadata>
   <metadata name="mnPrincipal.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>14, 13</value>
